--- a/rule-set.ini
+++ b/rule-set.ini
@@ -2,6 +2,8 @@
 ;专为RULE-SET设计
 
 ;设置规则标志位
+ruleset=🎯 全球直连,[]RULE-SET,pt
+ruleset=🎯 全球直连,[]RULE-SET,tracker
 ruleset=🎯 全球直连,[]RULE-SET,applications
 ruleset=🎯 全球直连,[]DOMAIN,clash.razord.top
 ruleset=🎯 全球直连,[]DOMAIN,yacd.haishan.me
