--- a/rule-set.ini
+++ b/rule-set.ini
@@ -1,4 +1,4 @@
-[custom]
+*[custom]
 ;专为RULE-SET设计
 
 ;设置规则标志位
@@ -39,4 +39,4 @@ custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`
 enable_rule_generator=true
 overwrite_original_rules=true
 
-clash_rule_base=https://raw.githubusercontent.com/wyk19/subconverter-web/master/rules/base.yml
+clash_rule_base=https://raw.githubusercontent.com/Qoo-330ml/Clash_Rules_PT/main/base.yml
