--- a/rule-set.ini
+++ b/rule-set.ini
@@ -2,6 +2,7 @@
 ;专为RULE-SET设计
 
 ;设置规则标志位
+
 ruleset=🌎 全球直连,[]RULE-SET,pt
 ruleset=🌎 全球直连,[]RULE-SET,tracker
 ruleset=🌎 全球直连,[]RULE-SET,applications
@@ -18,6 +19,8 @@ ruleset=🌎 全球直连,[]RULE-SET,lancidr
 ruleset=🌎 全球直连,[]RULE-SET,cncidr
 ruleset=🚀 手动切换,[]RULE-SET,telegramcidr
 ruleset=🌎 全球直连,[]GEOIP,LAN
+ruleset=🌎 全球直连,[]DOMAIN-SUFFIX,cn
+ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,-cn
 ruleset=🌎 全球直连,[]GEOIP,CN
 ruleset=🐋 漏网之鱼,[]MATCH
 ;设置规则标志位
