--- a/rule-set.ini
+++ b/rule-set.ini
@@ -2,9 +2,15 @@
 ;专为RULE-SET设计
 
 ;设置规则标志位
-
+;个人需求规则
+ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,telegra.ph
+ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,telegram.org
+ruleset=🌎 全球直连,[]DOMAIN,wanip4.unraid.net
+ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,sciencedirect
 ruleset=🌎 全球直连,[]RULE-SET,pt
 ruleset=🌎 全球直连,[]RULE-SET,tracker
+;以下规则来自Loyalsoldier/clash-rules
 ruleset=🌎 全球直连,[]RULE-SET,applications
 ruleset=🌎 全球直连,[]DOMAIN,clash.razord.top
 ruleset=🌎 全球直连,[]DOMAIN,yacd.haishan.me
