Update and rename rule-set.ini to ruleset_mini.ini

--- a/ruleset_mini.ini
+++ b/ruleset_mini.ini
@@ -1,5 +1,5 @@
 *[custom]
-;专为RULE-SET设计
+;适配Loyalsoldier/clash-rules以及适用PT的订阅转换配置
 
 ;设置规则标志位
 ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,services.googleapis.cn
