--- a/ruleset_mini.ini
+++ b/ruleset_mini.ini
@@ -34,6 +34,7 @@ ruleset=🐋 漏网之鱼,[]MATCH
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🤡 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🌎 全球直连`select`[]DIRECT`[]🚀 手动切换`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐋 漏网之鱼`select`[]🚀 手动切换`[]DIRECT
