--- a/base.yaml
+++ b/base.yaml
@@ -1,7 +1,7 @@
 mixed-port: 7890
-socks-port: 7891
 allow-lan: true
-mode: Rule
+bind-address: '*'
+mode: rule
 log-level: info
 external-controller: '127.0.0.1:9090'
 
