--- a/ruleset_mini.ini
+++ b/ruleset_mini.ini
@@ -43,4 +43,4 @@ custom_proxy_group=🐋 漏网之鱼`select`[]🚀 手动切换`[]DIRECT
 enable_rule_generator=true
 overwrite_original_rules=true
 
-clash_rule_base=https://raw.githubusercontent.com/Qoo-330ml/Clash_Rules_PT/main/base.yml
+clash_rule_base=https://raw.githubusercontent.com/Qoo-330ml/Clash_Rules_PT/main/base.yaml
