--- a/ruleset_G.ini
+++ b/ruleset_G.ini
@@ -11,7 +11,7 @@ ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,sciencedirect
 ruleset=🌎 全球直连,[]RULE-SET,pt
 ruleset=🌎 全球直连,[]RULE-SET,tracker
 
-ruleset=🍃 应用净化,[]RULE-SET,applications
+ruleset=🌎 全球直连,[]RULE-SET,applications
 ruleset=🌎 全球直连,[]DOMAIN,clash.razord.top
 ruleset=🌎 全球直连,[]DOMAIN,yacd.haishan.me
 ruleset=🌎 全球直连,[]RULE-SET,private
