--- a/ruleset_mini.ini
+++ b/ruleset_mini.ini
@@ -7,6 +7,7 @@ ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,telegra.ph
 ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,telegram.org
 ruleset=🌎 全球直连,[]DOMAIN,wanip4.unraid.net
 ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,sciencedirect
+
 ruleset=🌎 全球直连,[]RULE-SET,pt
 ruleset=🌎 全球直连,[]RULE-SET,tracker
 
@@ -43,4 +44,4 @@ custom_proxy_group=🐋 漏网之鱼`select`[]🚀 手动切换`[]DIRECT
 enable_rule_generator=true
 overwrite_original_rules=true
 
-clash_rule_base=https://raw.githubusercontent.com/Qoo-330ml/Clash_Rules_PT/main/base.yaml
+clash_rule_base=https://raw.githubusercontent.com/Qoo-330ml/Clash_Rules_PT/main/base.yml
