--- a/ruleset_G.ini
+++ b/ruleset_G.ini
@@ -2,9 +2,9 @@
 ;适配Loyalsoldier/clash-rules以及适用PT的订阅转换配置
 
 ;设置规则标志位
-ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,telegra.ph
-ruleset=🚀 手动切换,[]DOMAIN-SUFFIX,telegram.org
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,telegra.ph
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,telegram.org
 ruleset=🌎 全球直连,[]DOMAIN,wanip4.unraid.net
 ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,sciencedirect
 
@@ -17,13 +17,13 @@ ruleset=🌎 全球直连,[]DOMAIN,yacd.haishan.me
 ruleset=🌎 全球直连,[]RULE-SET,private
 ruleset=🛑 广告拦截,[]RULE-SET,reject
 ruleset=🌎 全球直连,[]RULE-SET,icloud
-ruleset=🚀 手动切换,[]RULE-SET,apple
-ruleset=🚀 手动切换,[]RULE-SET,google
-ruleset=🚀 手动切换,[]RULE-SET,proxy
+ruleset=🚀 节点选择,[]RULE-SET,apple
+ruleset=🚀 节点选择,[]RULE-SET,google
+ruleset=🚀 节点选择,[]RULE-SET,proxy
 ruleset=🌎 全球直连,[]RULE-SET,direct
 ruleset=🌎 全球直连,[]RULE-SET,lancidr
 ruleset=🌎 全球直连,[]RULE-SET,cncidr
-ruleset=🚀 手动切换,[]RULE-SET,telegramcidr
+ruleset=🚀 节点选择,[]RULE-SET,telegramcidr
 ruleset=🌎 全球直连,[]GEOIP,LAN
 ruleset=🌎 全球直连,[]DOMAIN-SUFFIX,cn
 ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,-cn
@@ -32,6 +32,7 @@ ruleset=🐋 漏网之鱼,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🤡 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
