--- a/ruleset_mini.ini
+++ b/ruleset_mini.ini
@@ -32,7 +32,7 @@ ruleset=🐋 漏网之鱼,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]🤡 故障转移`[]🔮 负载均衡`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🤡 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
