--- a/base.yml
+++ b/base.yml
@@ -9,17 +9,11 @@ cfw-latency-timeout: 3000
 cfw-latency-url: http://www.gstatic.com/generate_204
 
 rule-providers:
-  pt:
+  PrivateTracker:
     type: http
     behavior: domain
-    url: "https://raw.githubusercontent.com/Qoo-330ml/Clash_Rules_PT/main/rule-providers/pt.txt"
-    path: ./ruleset/pt.yaml
-    interval: 86400
-  tracker:
-    type: http
-    behavior: domain
-    url: "https://raw.githubusercontent.com/Qoo-330ml/Clash_Rules_PT/main/rule-providers/tracker.txt"
-    path: ./ruleset/tracker.yaml
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.yaml"
+    path: ./ruleset/PrivateTracker.yaml
     interval: 86400
   reject:
     type: http
