--- a/ruleset_G.ini
+++ b/ruleset_G.ini
@@ -8,8 +8,7 @@ ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,telegram.org
 ruleset=🌎 全球直连,[]DOMAIN,wanip4.unraid.net
 ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,sciencedirect
 
-ruleset=🌎 全球直连,[]RULE-SET,pt
-ruleset=🌎 全球直连,[]RULE-SET,tracker
+ruleset=🌎 全球直连,[]RULE-SET,PrivateTracker
 
 ruleset=🌎 全球直连,[]RULE-SET,applications
 ruleset=🌎 全球直连,[]DOMAIN,clash.razord.top
