--- a/qoo.ini
+++ b/qoo.ini
@@ -10,7 +10,7 @@ ruleset=🌎 全球直连,[]DOMAIN,wanip4.unraid.net
 ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,sciencedirect
 
 ruleset=🌎 全球直连,[]RULE-SET,PrivateTracker
-
+ruleset=🚀 节点选择,[]RULE-SET,PTweb
 ruleset=🌎 全球直连,[]RULE-SET,applications
 ruleset=🌎 全球直连,[]DOMAIN,clash.razord.top
 ruleset=🌎 全球直连,[]DOMAIN,yacd.haishan.me
