--- a/base.yml
+++ b/base.yml
@@ -21,6 +21,11 @@ rule-providers:
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.yaml"
     path: ./ruleset/PrivateTracker.yaml
     interval: 86400
+  115:
+    type: http
+    behavior: domain
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/115/115.list"
+    interval: 86400
   OpenAI:
     type: http
     behavior: domain
