--- a/qoo.ini
+++ b/qoo.ini
@@ -10,6 +10,7 @@ ruleset=🌎 全球直连,[]DOMAIN-KEYWORD,sciencedirect
 
 ruleset=🌎 全球直连,[]RULE-SET,PrivateTracker
 ruleset=🚀 节点选择,[]RULE-SET,PTweb
+ruleset=🌎 全球直连,[]RULE-SET,115
 ruleset=🌎 全球直连,[]RULE-SET,applications
 ruleset=🌎 全球直连,[]DOMAIN,clash.razord.top
 ruleset=🌎 全球直连,[]DOMAIN,yacd.haishan.me
